Fix display and focus of Articles image link
* `d-flex` is not needed and broke the display of the link around it.
* Ensure focus around image nicely uses the borders. Without block there
was a protrusion caused by the link being wider but narrower than the
image it contains.

--- a/assets/src/styles/blocks/Articles.scss
+++ b/assets/src/styles/blocks/Articles.scss
@@ -57,6 +57,10 @@
 .article-list-item-image {
   order: 2;
 
+  a {
+    display: block;
+  }
+
   img {
     width: 100% !important;
     object-fit: cover;
