--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -103,6 +103,7 @@ a --link-- {
 
   &:focus {
     outline: 2px solid rgba(0, 106, 255, 0.4);
+    outline-offset: 2px;
     border-radius: 4px;
   }
 
