--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -81,7 +81,7 @@ $navbar-default-height: 60px;
         outline: 2px solid rgba(255, 255, 255, 0.4);
       }
       // Need to undo the bootstrap outline-offset to get a consistent result.
-      outline-offset: 0;
+      outline-offset: 2px;
     }
   }
 }
