Use :not(:focus-visible) to avoid when clicked
* For browsers that don't support :focus-visible the rule is still not
applied, so it still has the focus state.
* Add CSS targetting search input specifically.

Ref: https://jira.greenpeace.org/browse/PLANET-6008

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -17,6 +17,10 @@
     }
   }
 
+  &:focus:not(:focus-visible) {
+    outline: 0;
+  }
+
   *, &::before, &:after {
     transition-property: inherit;
     transition-duration: inherit;
