Prevent active link border from radius on hover
* And active link.
* Still has a radius on focus-visible state, hard to get around.

Ref: https://jira.greenpeace.org/browse/PLANET-6008

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -462,6 +462,10 @@ $navbar-default-height: 60px;
           border-bottom-color: $white;
         }
       }
+
+      &:focus:not(:focus-visible) {
+        border-radius: 0;
+      }
     }
 
     .active .nav-link --nav-link-active-- {
