Fixes following review
Removed variables
Set toggle colors to footer
Fix cloudflare purge trigger

--- a/assets/src/scss/partials/country-selector-new.scss
+++ b/assets/src/scss/partials/country-selector-new.scss
@@ -3,4 +3,4 @@
 @import "../base/colors";
 @import "../base/fonts";
 
-//@import "../layout/country-selector";
+@import "../layout/country-selector";
