--- a/templates/base.twig
+++ b/templates/base.twig
@@ -50,7 +50,7 @@
 		{{ function('wp_footer') }}
 	{% endblock %}
 	{% if not new_design_country_selector %}
-		<script id="countries_script" type="application/json">{% include "countries.json" %}</script>
+		<script id="countries_script" type="application/json" async>{% include "countries.json" %}</script>
 	{% endif %}
 </body>
 </html>
