--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,6 +1,6 @@
 <footer id="footer" class="site-footer site-footer--{{ nav_type }}">
 	{% if new_design_country_selector and nav_type != 'minimal' %}
-	<div id="country-selector" class="site-footer__country-selector">
+	<div id="country-selector" class="footer-country-selector">
 		{% include 'footer_country_selector.twig' %}
 	</div>
 	{% endif %}
