--- a/assets/src/scss/base/_variables.scss
+++ b/assets/src/scss/base/_variables.scss
@@ -3,11 +3,12 @@ $roboto:     "Roboto", sans-serif;
 $lora:       "Lora", serif;
 
 // Media queries
-$extra-small-width:  320px;
-$small-width:        576px;
-$medium-width:       768px;
-$large-width:        992px;
-$extra-large-width:  1200px;
+$extra-small-width:       320px;
+$small-width:             576px;
+$medium-width:            768px;
+$large-width:             992px;
+$extra-large-width:       1200px;
+$extra-extra-large-width: 1600px;
 
 // Units:
 $au: auto;
