--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -84,16 +84,14 @@
     }
   }
 
-  div.post-content {
-    .container {
-      padding-left: 0;
-      padding-right: 0;
-    }
-  }
-
   .post-articles-block .articles-block {
     border-top: 1px solid transparentize($grey-20, 0.5);
     padding-top: 16px;
+
+    > .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
 
     @include medium-and-up {
       padding-top: 24px;
