PLANET-6430: Carousel Header: CTA button is not editable in Safari
Ref: https://jira.greenpeace.org/browse/PLANET-6430

A CSS definition from bootstrap prevents CTA button from being editable on Safari

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -240,3 +240,8 @@ input.describe[type=text][data-setting=caption] {
   font-size: 13px;
   line-height: 1.5;
 }
+
+// Allow button edition via click on Safari
+.btn {
+  user-select: auto;
+}
