Use original class name, it's used in TABoxout
* The -new suffix was only added because the block was in beta, so had
to be used together with the old version. Since the old version is
removed, we can use this class again without suffix.

--- a/assets/src/styles/blocks/Covers/layouts/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/layouts/TakeActionCovers.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.cover-card-new {
+.cover-card {
   box-shadow: 0 4px 3px rgba(0, 0, 0, 0.16);
   transition: box-shadow 0.2s;
   min-height: 440px;
