Add missing TAB edit, clean up old files
* Looks like an unused file still existed.
* Remove redundant rules and rename classes so editor fix for
contenteditable elements with line clamp can work.

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -20,6 +20,7 @@
 @import "blocks/SubmenuEditor";
 @import "blocks/HappypointEditor";
 @import "blocks/OldENForm/ENFormEditor";
+@import "blocks/TakeActionBoxout/edit";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
