--- a/assets/src/styles/blocks/TakeActionBoxout/edit.scss
+++ b/assets/src/styles/blocks/TakeActionBoxout/edit.scss
@@ -1,17 +1,12 @@
-.cover-card.action-card {
+.boxout {
   position: relative;
 
   a {
     pointer-events: none;
   }
 
-  .cover-card-excerpt,
-  .cover-card-btn {
-    display: block;
-  }
-
   // Prevent line clamp on editable stuff, because it's very buggy.
-  div[contenteditable] {
+  [contenteditable] {
     -webkit-line-clamp: unset !important;
   }
 }
