Fix space between breadcrumb tags
This was removed in a previous commit causing tags to be too close to
each other.

--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -25,6 +25,10 @@
       }
     }
     display: inline-block;
+
+    &:not(:only-child):not(:last-child):not(.page-type) {
+      margin-inline-end: 8px;
+    }
   }
 
   .tag-item--main {
