PLANET-6430: Carousel Header - CTA button is not editable in Safari
Ref: https://jira.greenpeace.org/browse/PLANET-6430

Change editable button to a div so that Safari issues
on pointer events and user can't happen

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -110,3 +110,8 @@
     padding-inline-start: 110px;
   }
 }
+
+// Fix Safari issue with forced min-width:1px in editor
+.carousel-header .carousel-item .carousel-caption .main-header .action-button div.btn {
+  overflow: initial;
+}
