--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -5,7 +5,7 @@
 				<figure class="author-block-image d-none d-sm-none d-md-block">
 					<img
 						itemprop="image"
-						src="{{ fn('get_avatar_url', post.author.id, {'size' : 294 }) }}"
+						src="{{ fn('get_avatar_url', post.author.id, {'size' : 294, 'default': 'mm'}) }}"
 						alt="{{ post.author.name }}"
 					/>
 				</figure>
