Carousel Header: Remove redundant transform on previous icon
On RTL the icons are reversed, the previous icon is on the
right. So it's already pointing at the proper direction.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -570,7 +570,7 @@ $medium-image-height: 600px;
       }
 
       html[dir="rtl"] & {
-        transform: scaleX(-1);
+        transform: none;
       }
     }
   }
