--- a/templates/search.twig
+++ b/templates/search.twig
@@ -359,15 +359,12 @@
 								{% set displayed_posts = posts %}
 							{% endif %}
 							<ul class="list-unstyled">
-								{% for post in displayed_posts %}
-									{% include ['tease-search.twig', 'tease-'~post.post_type~'.twig', 'tease.twig'] %}
-								{% endfor %}
 							</ul>
-							{% if ( load_more and found_posts > paged_posts|length ) %}
+							{% if ( load_more ) %}
 								<div class="col-lg-12 mb-5 load-more-button-div">
 									<button
 										class="btn btn-secondary more-btn {{ load_more.async ? 'btn-load-more-async' : '' }} btn-load-more-click-scroll"
-										data-current_page="{{ current_page }}"
+										data-current_page="-1"
 										data-total_posts="{{ found_posts }}"
 										data-posts_per_load="{{ load_more.posts_per_load }}"
 										data-ga-category="Search Page"
