Use same image controls as Columns block
Ref: https://jira.greenpeace.org/browse/PLANET-6471
* Move buttons-overlay class outside of the columns-specific class so it
can be reused.
* Put styles on wrapper div instead of on img in editor only.
* Convert earlier added unintentional double quotes to single.

--- a/assets/src/styles/blocks/TakeActionBoxout/edit.scss
+++ b/assets/src/styles/blocks/TakeActionBoxout/edit.scss
@@ -10,3 +10,29 @@
     -webkit-line-clamp: unset !important;
   }
 }
+
+// I had to put these styles on the container to get the image controls to work, and remove some from the image itself.
+.boxout-image-container {
+  position: relative;
+  background: $grey-20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  float: left;
+  width: 120px;
+  height: 120px;
+
+  @include medium-and-up {
+    height: 100%;
+    width: 45%;
+    padding: 0;
+    margin-inline-end: 16px;
+  }
+
+  img {
+    width: 100%;
+    // Account for different markup in the editor, where it needs a wrapper to work.
+    margin-inline-end: 0;
+  }
+}
