--- a/assets/src/styles/blocks/Covers/CoversStyle.scss
+++ b/assets/src/styles/blocks/Covers/CoversStyle.scss
@@ -3,7 +3,10 @@
 @import "../../master-theme/assets/src/scss/base/mixins";
 @import "../../master-theme/assets/src/scss/base/fonts";
 
-// P4 Blocks
-@import "layouts/TakeActionCovers";
-@import "layouts/CampaignCovers";
-@import "layouts/ContentCovers";
+// Block styles
+@import "styles/TakeActionCovers";
+@import "styles/CampaignCovers";
+@import "styles/ContentCovers";
+
+// Block layouts
+@import "layouts/CoversCarouselLayout";
