Move palette classes to separate file
* The base/_colors file is being imported in many separate
entrypoints, and contained actual classes which were duplicated and
increased the size of the other files.

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -14,6 +14,7 @@ Text Domain: planet4-master-theme
 // Base
 @import "base/variables";
 @import "base/colors";
+@import "base/palette";
 @import "base/functions";
 @import "base/mixins";
 @import "base/fonts";
