--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -6,6 +6,7 @@
 
 @import "base/variables";
 @import "base/colors";
+@import "base/palette";
 @import "base/functions";
 @import "base/mixins";
 @import "base/fonts";
