Add container class to page-template elements
This is to ensure that all pages have the same width and paddings, regardless of their content

--- a/templates/author.twig
+++ b/templates/author.twig
@@ -28,7 +28,7 @@
 		</div>
 	</header>
 
-	<div class="page-template">
+	<div class="page-template container">
 		<h3>{{ __( 'Posts by ', 'planet4-master-theme' ) }} {{ author.name }}</h3>
 
 		<div class="row">
