--- a/templates/evergreen.twig
+++ b/templates/evergreen.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="page-template">
+	<div class="page-template container">
 		{{ post.content|raw }}
 	</div>
 {% endblock %}
