--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 
-	<div class="page-template">
+	<div class="page-template container">
 		{% for name, block in blocks %}
 			{{ fn('do_blocks', block )|raw }}
 		{% endfor %}
