--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -14,7 +14,7 @@
 		</div>
 	</header>
 
-	<div class="page-template">
+	<div class="page-template container">
 		<h3>{{ __( 'Results', 'planet4-master-theme' ) }}</h3>
 
 		<div class="row">
