PLANET-6376: Fine tune Carousel Header slide re-ordering design and UX
- Move up and down as a new behavior
- Add ellipsis to text
- New re-order function to slides
- Did a tricky workaround to the PanelBody's internal behavior
- Code refactor
- Move SlidebarSlidesEditor scss to a separate file
- Separate general logic to each slides
- Fix toggle funcionality
- Fix image focal point when the slide is open

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -1,14 +1,7 @@
 @import "../../master-theme/assets/src/scss/base/colors";
 @import "../../master-theme/assets/src/scss/base/mixins";
 @import "../../master-theme/assets/src/scss/base/variables";
-
-.carousel-sidebar-slide {
-  border-top-width: 3px;
-}
-
-.carousel-sidebar-insert-before {
-  border-top: 3px solid var(--wp-admin-theme-color, blue) !important;
-}
+@import "./SidebarSlidesEditor.scss";
 
 .visually-hidden {
   display: none;
