--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -18,6 +18,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<link rel="shortcut icon" type="image/ico" href="{{ theme.uri }}/favicon.ico"/>
+	<script src="https://unpkg.com/source-map@0.7.3/dist/source-map.js"></script>
 	{% include 'head/google_fonts.twig' %}
 
 	{% if hreflang %}
