PLANET-5321 Replace page-template with page-content as its main class
Ref: https://jira.greenpeace.org/browse/PLANET-5321

---

Although we use this in many places, it seems the more sane option to
replace this one instead of "hacking" WP's default Page post type body
classes array. It's also consistent with Post post type, where we use
`.post-content` for the same purpose.

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -1,4 +1,4 @@
-div.page-template {
+.page-content {
   > * {
     position: relative;
     z-index: 2;
@@ -47,7 +47,7 @@ div.page-template {
 }
 
 .single-campaign {
-  .page-template {
+  .page-content {
     > p:last-child {
       margin-bottom: $space-xxl;
     }
